# shai

./: .gitignore  .shai.config  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  MAINTAINERS  README.md  install.sh
shai-core/: Cargo.toml
shai-core/src/: lib.rs  logging.rs
shai-core/src/agent/: README.md  agent.rs  brain.rs  builder.rs  claims.rs  error.rs  events.rs  mod.rs  protocol.rs  tests.rs
shai-core/src/agent/actions/: brain.rs  mod.rs  tools.rs
shai-core/src/agent/output/: log.rs  mod.rs  pretty.rs  stdout.rs
shai-core/src/agent/states/: README.md  mod.rs  pause.rs  processing.rs  running.rs  starting.rs  states.rs  terminal.rs
shai-core/src/config/: config.rs
shai-core/src/runners/: mod.rs
shai-core/src/runners/clifixer/: fix.rs  mod.rs  prompt.rs
shai-core/src/runners/coder/: coder.rs  env.rs  mod.rs  prompt.rs  tests.rs
shai-core/src/runners/compacter/: mod.rs
shai-core/src/runners/gerund/: gerund.rs  mod.rs  prompt.rs  tests.rs
shai-core/src/runners/searcher/: mod.rs  prompt.rs  searcher.rs  tests.rs
shai-core/src/tools/: highlight.rs  mod.rs  tests_llm.rs  types.rs
shai-core/src/tools/bash/: bash.rs  mod.rs  structs.rs  tests.rs
shai-core/src/tools/fetch/: fetch.rs  mod.rs  structs.rs  tests.rs
shai-core/src/tools/fs/: mod.rs  operation_log.rs  tests.rs
shai-core/src/tools/fs/edit/: edit.rs  mod.rs  structs.rs  tests.rs
shai-core/src/tools/fs/find/: find.rs  mod.rs  structs.rs  tests.rs
shai-core/src/tools/fs/ls/: ls.rs  mod.rs  structs.rs  tests.rs
shai-core/src/tools/todo/: mod.rs  structs.rs  tests.rs  todo.rs
(+78 files in other folders)
